metadata/force-app/main/default/objects/CustomName_eOgqL__c/CustomName_eOgqL__c.object-meta.xml
<CustomObject>
    <description>Description_VhjPN</description>
    <label>CustomLabel_FfUPt</label>
    <nameField>
        <label>CustomLabel_FfUPt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_FfUPts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>