metadata/force-app/main/default/objects/CustomName_eOgqL__c/fields/CustomField_LFxFT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_LFxFT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldiOGGX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>